--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,79 +1,82 @@
 name: summon_bell
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+# 以下の行は、`flutter pub publish`を使用して誤ってpub.devにパッケージを公開することを防ぎます。これはプライベートパッケージに適しています。
+publish_to: 'none' # pub.devに公開する場合はこの行を削除してください。
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+# 以下は、アプリケーションのバージョンとビルド番号を定義します。
+# バージョン番号は3つの数字でドットで区切られ、1.2.43のようになります。
+# それに続いて任意のビルド番号が+で区切られます。
+# バージョンとビルド番号は、それぞれ--build-nameと--build-numberを指定することでflutter buildで上書き可能です。
+# Androidでは、build-nameはversionNameとして使用され、build-numberはversionCodeとして使用されます。
+# Androidのバージョン情報については、https://developer.android.com/studio/publish/versioning を参照してください。
+# iOSでは、build-nameはCFBundleShortVersionStringとして使用され、build-numberはCFBundleVersionとして使用されます。
+# iOSのバージョン情報については、https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html を参照してください。
+# Windowsでは、build-nameは製品およびファイルバージョンの主要、副要、およびパッチ部分として使用され、build-numberはビルドサフィックスとして使用されます。
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
-dependencies:
+# 依存関係は、パッケージが動作するために必要な他のパッケージを指定します。
+# パッケージの依存関係を最新のバージョンに自動的にアップグレードするには、`flutter pub upgrade --major-versions`を実行してください。あるいは、
+# 依存関係は、以下のバージョン番号をpub.devで利用可能な最新のバージョンに変更することで手動で更新できます。利用可能な最新のバージョンを確認するには、`flutter pub outdated`を実行してください。
+dependencies: # あなたのアプリケーションに必要なパッケージをここに追加します。
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Cupertino Icons iOSスタイルのアイコンにCupertinoIconsクラスを使用します。
   cupertino_icons: ^1.0.2
 
-dev_dependencies:
+  # flutter hooks フックを使用して状態を管理します。
+  flutter_hooks: ^0.20.3
+  # hooks riverpod 状態を管理します。
+  hooks_riverpod: ^2.4.9
+
+  # @riverpod アノテーションを使用するために必要
+  riverpod_annotation: ^2.3.3
+
+
+dev_dependencies: 
+  # 開発に必要なパッケージをここに追加します。
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  # "flutter_lints"パッケージには、良いコーディング慣習を奨励するための推奨されるリントのセットが含まれています。
+  # このパッケージは、あなたのパッケージのルートにある`analysis_options.yaml`ファイルで有効になります。
+  # 特定のリントルールを無効にしたり、追加のルールを有効にする方法については、そのファイルを参照してください。
+  flutter_lints: ^3.0.1
+  riverpod_lint: ^2.3.7
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  # ビルドプロセスを管理するために必要なパッケージ
+  # build_runner: ビルドを実行するためのツール
+  build_runner: ^2.4.7
 
-# The following section is specific to Flutter packages.
+  # riverpod_generator: Riverpodライブラリのためのコードジェネレーター。データクラスやプロバイダの生成に使用されます。
+  riverpod_generator: ^2.3.9
+
+# このファイルの一般的なDart部分に関する情報については、以下のページを参照してください：https://dart.dev/tools/pub/pubspec
+
+# 以下のセクションはFlutterパッケージに特有のものです。
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  # 以下の行は、Material Iconsフォントがアプリケーションに含まれるようにするためのものです。
+  # これにより、material Iconsクラスのアイコンを使用できるようになります。
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
+  # アプリケーションにアセットを追加するには、以下のようにassetsセクションを追加します。
+  assets:
+    - assets/images/
+    - assets/videos/
+    - assets/audios/
+  # 画像アセットは、解像度に応じた複数の「バリアント」を指定することができます。詳細はこちら:
   # https://flutter.dev/assets-and-images/#resolution-aware
 
-  # For details regarding adding assets from package dependencies, see
+  # パッケージ依存関係からアセットを追加する詳細については、以下のリンクを参照してください。
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+  # アプリケーションにカスタムフォントを追加するには、ここである"flutter"セクションにfontsセクションを追加します。
+  # このリストの各エントリーには、フォントファミリー名を示す"family"キーと、
+  # フォントのアセットとその他の記述子を示す"fonts"キーのリストが必要です。例えば:
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -86,5 +89,5 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # パッケージ依存関係からフォントを追加する詳細については、以下のリンクを参照してください。
+  # https://flutter.dev/custom-fonts/#from-packages
